--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aoc2023"
-version = "0.2.0"
+version = "0.9.0"
 authors = [
     {name = "Nikolai Krot", email = "talpus@gmail.com"}
 ]
@@ -18,6 +18,9 @@ dependencies = [
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [project.scripts]
 aoc2023 = "aoc.cli:main"
