--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,11 @@ where = ["src"]
 
 [project.scripts]
 aoc2023 = "aoc.cli:main"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
+pythonpath = [
+  ".", "src"
+]
