--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ readme = "README.md"
 license = {file = "LICENSE.txt"}
 requires-python = ">=3.7"
 dependencies = [
-    "click"
+    "click",
+    "numpy",
+    "networkx",
+    "pytest",
+    "pytest-datadir"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
